# takumi-speed-alert

./: .gitignore  99-gps-hotplug.rules  Cargo.toml  README.md  flake.nix  gpsd  override.conf
car-logger/: Cargo.toml
car-logger/src/: config.rs  gps.rs  main.rs  recorder.rs
common/: Cargo.toml
common/src/: lib.rs
docs/: hardware.md
installer/: Cargo.toml
installer/src/: main.rs
installer/ui/: app-window.slint  complete-page.slint  device-confirmation.slint  device-selection.slint  download-progress.slint  image-selection.slint  post-download.slint  processing-page.slint  region-selection.slint
map-preprocessor/: Cargo.toml
map-preprocessor/src/: lib.rs  main.rs
os/: Cargo.toml  build.sh  configuration.nix  flake.nix  flash.sh
os/src/: main.rs
src/: main.rs
