[workspace]
resolver = "3"
members = [
    "car-logger",
    "map-preprocessor",
    "common",
    "installer",
    "scratch_sysinfo",
    "scratch_livedisk",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
rstar = "0.12.2"
memmap2 = "0.9.10"
osmpbfreader = "0.19.1"
common = { path = "common" }
measurements = "0.11.1"
ctrlc = "3.5.2"
chrono = "0.4"
rkyv = "0.8.17"
slint = "1.17.1"
slint-build = "1.17.1"
reqwest = { version = "0.13.4", features = ["blocking"] }
rfd = "0.17.2"
rustc-hash = "2.1.3"
livedisk-core = "0.2.0"
