[package]
name = "car-logger"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { workspace = true }
common = { workspace = true }
memmap2 = { workspace = true }
measurements = { workspace = true }
rstar = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
