[package]
name = "car-logger"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true }
memmap2 = { workspace = true }
measurements = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ctrlc = { workspace = true }
chrono = { workspace = true }
rkyv = { workspace = true }
