[package]
name = "installer"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = { workspace = true }
common = { workspace = true }
map-preprocessor = { path = "../map-preprocessor" }
reqwest = { workspace = true }
rfd = { workspace = true }
livedisk-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
slint-build = { workspace = true }
