[package]
name = "map-preprocessor"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true, features = ["rtree"] }
memmap2 = { workspace = true }
measurements = { workspace = true }
osmpbfreader = { workspace = true }
rstar = { workspace = true }
bincode = { workspace = true }
rkyv = { workspace = true }
rustc-hash = { workspace = true }
